crates/libs/frieze/tests/ui/nested_maybe.stderr
error: frieze: nested Maybe is not supported.
 --> tests/ui/nested_maybe.rs:5:8
  |
5 |     x: Maybe<Maybe<String>>,
  |        ^^^^^^^^^^^^^^^^^^^^
